--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "graze/telnet-client": "^2.0"
+        "symfony/var-dumper": "^3.1",
+        "league/climate": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit" : "5.*",
@@ -36,7 +37,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Graze\\UnicontrollerClient\\Test\\Unit\\": "tests/unit"
+            "Graze\\UnicontrollerClient\\Test\\Unit\\": "tests/unit",
+            "Graze\\UnicontrollerClient\\ClassGenerator\\": "bin/src"
         }
     }
 }
