--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "require-dev": {
         "phpunit/phpunit" : "5.*",
         "squizlabs/php_codesniffer": "^2.5",
-        "graze/standards": "^1.0"
+        "graze/standards": "^1.0",
+        "mockery/mockery": "^0.9.5"
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +38,9 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "Graze\\UniControllerClient\\Test\\": "tests/src",
             "Graze\\UnicontrollerClient\\Test\\Unit\\": "tests/unit",
+            "Graze\\UnicontrollerClient\\Test\\Integration\\": "tests/integration",
             "Graze\\UnicontrollerClient\\ClassGenerator\\": "bin/src"
         }
     }
