Managed to lose clue/socket along the way. Add it back

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ script:
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --access-token=":scrutinizer-access-token" --format=php-clover ./tests/report/coverage.clover
+  - php ocular.phar code-coverage:upload --format=php-clover ./tests/report/coverage.clover
