--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "php": ">=5.5.0",
         "symfony/var-dumper": "^3.1",
-        "league/climate": "^3.2"
+        "league/climate": "^3.2",
+        "clue/socket-raw": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit" : "5.*",
