--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": "^5.6",
         "symfony/var-dumper": "^3.1",
         "league/climate": "^3.2",
         "clue/socket-raw": "^1.2"
